--- a/i18n/es.json
+++ b/i18n/es.json
@@ -113,25 +113,81 @@
     "index_sidebar_event_barcelona": "Barcelona",
     "index_sidebar_event_date2": "25 Diciembre 2025",
     "index_sidebar_event_valencia": "Valencia",
-    "index_sidebar_event_date3": "08 Enero 2026",
-    "packs": {
-        "pack_se_asia": {
-            "title": "Pack Sudeste Asiático",
-            "descShort": "Disfruta una aventura maravillosa por tres países.",
-            "desc": "Disfruta una aventura maravillosa por tres países...",
-            "alt": "Vietnam"
+    "index_sidebar_event_date3": "08 Enero 2026",        
+    "continents": {
+        "america": "América"
+    },
+
+    "countries": {
+        "peru": "Perú"
+    },
+
+    "difficulty": {
+        "hard": "Difícil"
+    },
+
+    "transport": {
+        "hiking": "A pie"
+    },
+
+    "features": {
+        "camping": "Camping",
+        "local-guide": "Guía local",
+        "permit-required": "Requiere permiso"
+    },
+
+    "includes": {
+        "guide": "Guía profesional",
+        "transport": "Transporte incluido",
+        "meals": "Todas las comidas",
+        "camping-gear": "Equipo de camping",
+        "permits": "Permisos del Camino Inca y Machu Picchu",
+        "insurance": "Seguro incluido"
+    },
+
+    "highlights": {
+        "valle-sagrado": "Paisajes del Valle Sagrado",
+        "patallaqta": "Ruinas de Patallaqta",
+        "warmiwañusca": "Paso Warmiwañusca (4200 m)",
+        "runkurakay": "Ruinas de Runkurakay",
+        "sayacmarca": "Complejo arqueológico de Sayacmarca",
+        "phuyupatamarca": "Phuyupatamarca, 'La ciudad sobre las nubes'",
+        "inti-punku": "Puerta del Sol",
+        "machupicchu": "Machu Picchu"
+    },
+
+    "routes": {
+        "route_caminoinca": {
+        "title": "Camino Inca a Machu Picchu",
+        "location": "Cusco, Perú",
+        "descShort": "Una experiencia única recorriendo los pasos de los antiguos incas.",
+        "descLong": "El Camino Inca es considerado uno de los trekkings más espectaculares del mundo...",
+        "galleryAlt": "Imagen del Camino Inca",
+
+        "itinerary": {
+            "1": {
+            "title": "Día 1: Cusco - Km 82 - Wayllabamba",
+            "text": "Salida temprano de Cusco hacia el km 82..."
+            },
+            "2": {
+            "title": "Día 2: Wayllabamba - Paso Warmiwañusca - Pacaymayo",
+            "text": "El día más desafiante del recorrido..."
+            },
+            "3": {
+            "title": "Día 3: Pacaymayo - Wiñay Wayna",
+            "text": "Visitamos los complejos arqueológicos..."
+            },
+            "4": {
+            "title": "Día 4: Wiñay Wayna - Machu Picchu - Cusco",
+            "text": "Salida antes del amanecer hacia Inti Punku..."
+            }
         },
-        "pack_india": {
-            "title": "Pack India",
-            "descShort": "New Delhi y Mumbai, incluye transporte y hoteles",
-            "desc": "New Delhi y Mumbai, incluye transporte y hoteles.",
-            "alt": "India"
-        },
-        "pack_tanzania": {
-            "title": "Pack Tanzania",
-            "descShort": "Safaris por Tanzania con rutas y alojamiento",
-            "desc": "Safaris por Tanzania, rutas, transporte y alojamiento.",
-            "alt": "Tanzania"
+
+        "reviews": {
+            "r1": "Un trek impresionante. El amanecer en Machu Picchu es inolvidable.",
+            "r2": "Muy duro pero totalmente recomendable."
+        }
         }
     }
+
 }
