Sección "Otros rincones" añadida. Reemplazado por el botón de "Packs" del header.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
     "brand": "Backpackers Without Borders",
     "nav_home": "Home",
     "nav_routes": "Routes",
-    "nav_packs": "Packs",
+    "nav_cities": "Cities",
     "nav_blog": "Blog",
     "nav_community": "Community",
     "nav_contact": "Contact",
@@ -14,6 +14,10 @@
     "profile_logout": "Log out",
     "blog_title": "Travelers Blog",
     "blog_subtitle": "Tips, stories and guides for your next backpacking adventure",
+    "cities_title": "Other corners",
+    "cities_subtitle": "View information about cities around the world",
+    "cities_popular_destinations": "Cities around the world",
+    "btn_explore": "Explore",
     "featured_badge": "Featured",
     "featured_category": "Travel guides",
     "featured_title": "Complete guide to the Inca Trail: Everything you need to know",
