--- a/i18n/es.json
+++ b/i18n/es.json
@@ -4,7 +4,7 @@
     "brand": "Mochileros Sin Fronteras",
     "nav_home": "Inicio",
     "nav_routes": "Rutas",
-    "nav_packs": "Packs",
+    "nav_cities": "Ciudades",
     "nav_blog": "Blog",
     "nav_community": "Comunidad",
     "nav_contact": "Contacto",
@@ -14,6 +14,10 @@
     "profile_logout": "Cerrar sesión",
     "blog_title": "Blog de Viajeros",
     "blog_subtitle": "Consejos, historias y guías para tu próxima aventura mochilera",
+    "cities_title": "Otros rincones",
+    "cities_subtitle": "Visualiza información sobre las ciudades del mundo",
+    "cities_popular_destinations": "Ciudades del mundo",
+    "btn_explore": "Explorar",
     "featured_badge": "Destacado",
     "featured_category": "Guías de viaje",
     "featured_title": "Guía completa para hacer el Camino Inca: Todo lo que necesitas saber",
