--- a/i18n/es.json
+++ b/i18n/es.json
@@ -118,6 +118,21 @@
     "index_sidebar_event_date2": "25 Diciembre 2025",
     "index_sidebar_event_valencia": "Valencia",
     "index_sidebar_event_date3": "08 Enero 2026",        
+    "btn_my_account": "Mi Cuenta",
+    "page_title_register": "Registro - Mochileros Sin Fronteras",
+    "page_title_privacy": "Política de Privacidad - Mochileros Sin Fronteras",
+    "page_title_search": "Buscar Rutas - Mochileros Sin Fronteras",
+    "page_title_checkout": "Finalizar Compra - Mochileros Sin Fronteras",
+    "page_title_route_detail": "Detalle de Ruta - Mochileros Sin Fronteras",
+    "page_title_packs": "Packs - Mochileros Sin Fronteras",
+    "page_title_contact": "Contacto - Mochileros Sin Fronteras",
+    "nav_packs": "Packs",
+    "footer_about": "Tu comunidad de viajeros y aventureros. Descubre el mundo con nosotros.",
+    "footer_news_sub": "Recibe nuestras últimas novedades",
+    "auth_login": "Iniciar sesión",
+    "auth_register": "Registrarse",
+    "privacy_title": "Política de Privacidad",
+    "privacy_updated": "Última actualización: Enero 2025",
     "continents": {
         "america": "América"
     },
